--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "dependencies": {
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "underscore": "^1.8.3",
+    "classnames": "^2.2.5",
+    "baconjs": "^0.7.73"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
